<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textWhite"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/authorize_step1"
        />

    <Button
        android:id="@+id/btn_authorize_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/button"
        android:textColor="@color/buttonText"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:text="@string/authorize_request"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/textWhite"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/authorize_step2"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

        <EditText
            android:id="@+id/edit_pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pin_code"
            android:inputType="numberPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_authorize"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:textColor="@color/buttonText"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:text="@string/authorize"
        />

</LinearLayout>
