<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/status_update_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/toolbar_avatar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_timeline_user"
                    />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_marginStart="16dp"
                    android:id="@+id/toolbar_screen_name"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/status_input"
                android:hint="@string/input_tweet"
                android:textColor="@color/textWhite"
                android:textColorHint="@color/textWhite"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:minLines="5"
                android:inputType="textMultiLine"
                android:gravity="top"
                />

            <net.yusukezzz.ssmtc.ui.misc.ThumbnailTileLayout
                android:id="@+id/status_thumbnail_tile"
                android:background="@color/colorPrimaryDark"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/select_photos"
                    android:text="@string/select_photos"
                    android:textColor="@color/buttonText"
                    android:background="@color/button"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/send_tweet"
                    android:text="@string/status_send"
                    android:textColor="@color/buttonText"
                    android:background="@color/button"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
